data/derived/fa15/progs/unify/prog2202.ml.out
Characters 79-85:
  | Sine x-> "sin("@ exprToString x@")";;
             ^^^^^^
Error: This expression has type string but an expression was expected of type
         'a list
